@@ -584,7 +584,7 @@
     If the parameter is missing, a value of 100% is used.
     The markup equivalent of this function is <a href="#opacityEquivalent">given below</a>.
     <p class="note">
-      The ''opacity()'' function is not meant to be a shorthand of the 'opacity' property. Furthermore, it allows setting the transparency of intermediate filter primitive results before passing to the next filter primitive. If the ''opacity()'' filter function is set as last filter primitive, the value of the 'opacity' property is multiplied on top of the value of the filter function, which may result in a more transparent content.
+      The opacity filter function is not meant to be a shorthand of the 'opacity' property. Furthermore, it allows setting the transparency of intermediate filter primitive results before passing to the next filter primitive. If the opacity filter function is set as last filter primitive, the value of the 'opacity' property is multiplied on top of the value of the filter function, which may result in a more transparent content.
     </p>
   </dd>
 
@@ -597,6 +597,7 @@
     Values of amount over 100% are allowed, providing brighter results.
     If the parameter is missing, a value of 100% is used.
     The markup equivalent of this function is <a href="#brightnessEquivalent">given below</a>.
+    <p class=issue>The brightness filter function (and possibly the contrast filter function as well) do not have linear behavior. This is not a problem, but might be confusing. Should we try to make it more linear as graphic applications seem do it?</p>
   </dd>
 
   <dt><dfn>contrast(&lt;number&gt; | &lt;percentage&gt;)</dfn></dt>
@@ -1635,10 +1636,6 @@ which apply to the <a>transfer function elements</a>.</p>
           <p>
   For a value <code>C &lt; 1</code> find <code>k</code> such that:</p>
           <p class="filterformula">k/n &lt;= C &lt; (k+1)/n</p>
-
-          <p>
-  For a value <code>C</code> pick a <code>k</code> such that:</p>
-          <p class="filterformula">k/N &lt;= C &lt; (k+1)/N</p>
 
           <p>
   The result <code>C'</code> is given by:</p>
