@@ -1,5 +1,10 @@
 Changes for Filter Effects specification
 ----------------------------------------
+2013-01-14  Dirk Schulze  <dschulze@adobe.com>
+- Corrected issue with feComponentTransfer
+  https://www.w3.org/Bugs/Public/show_bug.cgi?id=20658
+- Added issue about adding amount transformation function on brightness and contrast filter functions.
+
 2013-01-13  Dirk Schulze  <dschulze@adobe.com>
 - More reorganizing for better orientation.
 - Distinguish between custom filter resource format and custom filter type.
